--- a/proyectoreact/src/components/Footer/Footer.css
+++ b/proyectoreact/src/components/Footer/Footer.css
@@ -4,6 +4,11 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  -webkit-box-shadow: -7px -12px 25px -1px rgba(255, 130, 67, 1);
+  -moz-box-shadow: -7px -12px 25px -1px rgba(255, 130, 67, 1);
+  box-shadow: -7px -12px 25px -1px rgba(255, 130, 67, 1);
   background-color: black;
+  border-top-left-radius: 5%;
+  border-top-right-radius: 5%;
+  border-top: 1px rgba(255, 130, 67, 1);
 }
