--- a/proyectoreact/src/App.css
+++ b/proyectoreact/src/App.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
 }
 
-main {
+.main {
   width: 100vw;
   height: 75vh;
+  background-color: rgb(221, 241, 248);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
