--- a/proyectoreact/src/components/FigureUser/FigureUser.css
+++ b/proyectoreact/src/components/FigureUser/FigureUser.css
@@ -1,9 +1,9 @@
 .imageUser {
   width: 200px;
   height: 200px;
-  
+  border-radius: 10%;
 }
 
-h4 {
+.emailUser {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
