--- a/proyectoreact/src/components/NavBar/NavBar.css
+++ b/proyectoreact/src/components/NavBar/NavBar.css
@@ -1,17 +1,19 @@
 .homeavatar {
-    row-gap: 5px;
-    width: 15vw;
-    height: 12vh;
-    justify-content: space-around;
-    align-items: center;
+  row-gap: 5px;
+  width: 15vw;
+  height: 12vh;
+  justify-content: space-around;
+  align-items: center;
 }
 .buttonsbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    row-gap: 5px;
-    width: 30vw;
-    height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  row-gap: 5px;
+  width: 30vw;
+  height: 12vh;
 }
 
-
+nav {
+  max-width: 90vw;
+}
